# D.W.I.F

./: .gitignore  README.md  index.mjs  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
docs/: SETUP.md  SIMPLE_GUIDE.md
lib/: dwif.mjs
scripts/: install-deps-linux.sh  install-deps-macos.sh  install-deps-windows.ps1  prepare-bundled-node.mjs  process-image.mjs  run-tauri.mjs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
test/: webp.test.mjs
ui/: app.js  index.html  styles.css
